# Illuminata

./: .clang-tidy  LICENSE  README.md  meson.build  meson_options.txt
data/: meson.build  org.kurbo96.Hirgon.desktop.in.in  org.kurbo96.Illuminata.desktop.in.in
data/icons/: meson.build
demo/: demo.tex
icon/: mat.py
include/hirgon/: adwaita.hpp  cairo.hpp  fmt.hpp  gdk.hpp  geometry.hpp  gio.hpp  glib.hpp  gtk.hpp  hirgon.hpp  mupdf.hpp  opengl.hpp  pdf.hpp
include/hirgon/pdf/: info.hpp  opengl.hpp  transform.hpp  window.hpp
include/illuminata/: fmt.hpp  geometry.hpp  illuminata.hpp  mupdf.hpp  opengl.hpp  pdf.hpp
include/illuminata/pdf/: info.hpp  opengl.hpp  transform.hpp  window.hpp
src/: main.cpp
subprojects/: libadwaitamm.wrap
